Generate go-server
