# api/swagger.yaml
@@ -15,95 +15,99 @@ paths:
     post:
       description: |
         Create CA
+      operationId: createCA
       produces:
         - application/json
       parameters:
         -
-          name: password
-          in: query
-          description: PEM pass phrase
+          name: certificate_authority
+          in: body
+          description: Certificate Subject
           required: true
-          type: string
-          default: capassword
-        -
-          name: country_name
-          in: query
-          description: Country Name (2 letter code)
-          required: true
-          type: string
-          default: JP
-        -
-          name: state_of_province
-          in: query
-          description: State or Province Name (full name)
-          required: true
-          type: string
-          default: Default Province
-        -
-          name: locality_name
-          in: query
-          description: Locality Name (eg, city)
-          required: true
-          type: string
-          default: Default City
-        -
-          name: org_name
-          in: query
-          description: Organization Name (eg, company)
-          required: true
-          type: string
-          default: Default Company Ltd
-        -
-          name: org_unit
-          in: query
-          description: Organizational Unit Name (eg, section)
-          required: true
-          type: string
-          default: Test Unit
-        -
-          name: common_name
-          in: query
-          description: Common Name (eg, your name or your server\'s hostname)
-          required: true
-          type: string
-          default: "*.local"
-          maxLength: 64
-        -
-          name: email
-          in: query
-          description: Email Address
-          required: true
-          type: string
-          default: ca@example.com
-          maxLength: 64
-        -
-          name: challenge_password
-          in: query
-          description: A challenge password
-          required: false
-          type: string
-          minLength: 4
-          maxLength: 20
-        -
-          name: optional_company_name
-          in: query
-          description: An optional company name
-          required: false
-          type: string
-        -
-          name: days
-          in: query
-          required: false
-          type: integer
-          default: 365
-        -
-          name: cdays
-          in: query
-          required: false
-          type: integer
-          default: 1095
+          schema:
+            $ref: '#/definitions/certificate_authority'
       responses:
         200:
           description: Successful response
-        505:
-          description: Already Exists
+
+        410:
+          description: Error Response
+          schema:
+            $ref: '#/definitions/errorModel'
+definitions:
+  certificate_authority:
+    type: object
+    properties:
+      pem_password:
+        type: string
+        description: PEM pass phrase
+      subject:
+        $ref: '#/definitions/subject'
+      days:
+        type: integer
+        default: 365
+        format: int32
+      cdays:
+        type: integer
+        default: 1095
+        format: int32
+  subject:
+    type: object
+    required:
+      - country_name
+      - state_of_province
+      - locality_name
+      - org_name
+      - org_unit
+      - common_name
+      - email
+    properties:
+      country_name:
+        type: string
+        description: Country Name (2 letter code)
+        default: JP
+      state_of_province:
+        type: string
+        description: State or Province Name (full name)
+        default: Default Province
+      locality_name:
+        type: string
+        description: Locality Name (eg, city)
+        default: Default City
+      org_name:
+        type: string
+        description: Organization Name (eg, company)
+        default: Default Company Ltd
+      org_unit:
+        type: string
+        description: Organizational Unit Name (eg, section)
+        default: Test Unit
+      common_name:
+        type: string
+        description: Common Name (eg, your name or your server\'s hostname)
+        default: "*.local"
+        maxLength: 64
+      email:
+        type: string
+        description: Email Address
+        maxLength: 64
+        default: ca@example.com
+      challenge_password:
+        type: string
+        description: A challenge password
+        minLength: 4
+        maxLength: 20
+      optional_company_name:
+        type: string
+        description:  An optional company name
+  errorModel:
+    type: object
+    required:
+      - code
+      - message
+    properties:
+      code:
+        type: integer
+        format: int32
+      message:
+        type: string
